--- a/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
@@ -1,28 +1,40 @@
 <div class = "center">
 	<div class="col-xs-6">
-		<h1>YOUR BORROW HISTORY</h1>
-		<table class="table text-left table-hover">
-			<thead>
-			   	<tr>
-			      	<th class="col-xs-2">Item</th>
-					<th class="col-xs-4">Description</th>
-					<th class="col-xs-2">Owner</th>
-					<th class="col-xs-1.5">Start Date</th>
-					<th class="col-xs-1.5">End Date</th>
-		    	</tr>
-		  	</thead>
-			<tbody>
-				<% @completed_borrow_transactions.each do |transaction|%>
-					<tr class="success">
-						<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-						<td><%= transaction.item.description %></td>
-						<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
-						<td><%= transaction.start_date%></td>
-						<td><%= transaction.end_date%></td>
-					</tr>
-				<% end %>
-		  	</tbody>
-		</table>
+		<h2>YOUR BORROW HISTORY</h2>
+		<p class="lead" style="font-size: 18px;">
+			Here you can view all your past borrow transactions
+		</p>
+		<hr>
+
+		<% if @completed_borrow_transactions.any? %>
+			<table class="table text-left table-hover">
+				<thead>
+				   	<tr>
+				      	<th class="col-xs-2">Item</th>
+						<th class="col-xs-4">Description</th>
+						<th class="col-xs-2">Owner</th>
+						<th class="col-xs-1.5">Start Date</th>
+						<th class="col-xs-1.5">End Date</th>
+			    	</tr>
+			  	</thead>
+				<tbody>
+					<% @completed_borrow_transactions.each do |transaction|%>
+						<tr class="success">
+							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+							<td><%= transaction.item.description %></td>
+							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
+							<td><%= transaction.start_date%></td>
+							<td><%= transaction.end_date%></td>
+						</tr>
+					<% end %>
+			  	</tbody>
+			</table>
+		<% else %>
+		<div><p>
+			Oh no! Looks like you haven't borrowed any items before :'( <br>
+			visit our items page to start browsing!
+		</p></div>
+		<% end %>
 	</div>
 
 	<div class="col-xs-6">
