--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -1,71 +1,89 @@
 <div class = "center">
-	<h1>MANAGE YOUR LENT ITEMS</h1>
-	<div class = "">
+	<div>
 		<div class="col-xs-6">
-			<div>ITEMS YOU ARE CURRENTLY LENDING</div>
-			<table class="table text-left table-hover">
-				<thead>
-			   		<tr>
-			      		<th class="col-xs-2">Item</th>
-			      		<th class="col-xs-4">Description</th>
-			      		<th class="col-xs-2.5">Borrower</th>
-			      		<th class="col-xs-1.5">Start Date</th>
-						<th class="col-xs-1.5">End Date</th>
-			    	</tr>
-			  	</thead>
-				<tbody>
-					<% @current_lend_transactions.each do |transaction|%>
-						<tr class="success">
-							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-							<td><%= transaction.item.description %></td>
-							<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
-							<td><%= transaction.start_date%></td>
-							<td><%= transaction.end_date%></td>
-							<% params = {isReturned: 1, redirect: lend_transactions_path, type: 'item_returned', end_date: Date.current} %>
-							<td><%= link_to transaction_path(transaction, transaction: params, item_id: transaction.item), method: :put,
-								data: {confirm: "Are you sure this item is returned?"},
-								'data-toggle': 'tooltip', title: 'Mark Item as Returned', 'data-placement': 'right',
-								class: "btn btn-success" do %>
-									<small><span class="glyphicon glyphicon-thumbs-up"></span></small>
-								<% end %>
-							</td>
-						</tr>
-					<% end %>
-			  	</tbody>
-			</table>
+			<h2>LENT ITEMS</h2>
+			<p class="lead" style="font-size: 18px;">
+				Here you can manage all the items that you are currently lending <br>
+				 or plan to lend in the future
+			</p>
+			<hr>
 
+			<% if @current_lend_transactions.any? %>
+				<div class="h4" style="text-align:left">Currently Lending</div>
+				<table class="table text-left table-hover">
+					<thead>
+				   		<tr>
+				      		<th class="col-xs-2">Item</th>
+				      		<th class="col-xs-4">Description</th>
+				      		<th class="col-xs-2.5">Borrower</th>
+				      		<th class="col-xs-1.5">Start Date</th>
+							<th class="col-xs-1.5">End Date</th>
+				    	</tr>
+				  	</thead>
+					<tbody>
+						<% @current_lend_transactions.each do |transaction|%>
+							<tr class="success">
+								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+								<td><%= transaction.item.description %></td>
+								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
+								<td><%= transaction.start_date%></td>
+								<td><%= transaction.end_date%></td>
+								<% params = {isReturned: 1, redirect: lend_transactions_path, type: 'item_returned', end_date: Date.current} %>
+								<td><%= link_to transaction_path(transaction, transaction: params, item_id: transaction.item), method: :put,
+									data: {confirm: "Are you sure this item is returned?"},
+									'data-toggle': 'tooltip', title: 'Mark Item as Returned', 'data-placement': 'right',
+									class: "btn btn-success" do %>
+										<small><span class="glyphicon glyphicon-thumbs-up"></span></small>
+									<% end %>
+								</td>
+							</tr>
+						<% end %>
+				  	</tbody>
+				</table>
+				<hr>
+			<% end %>
 
-			<div>ITEMS YOU WILL LEND IN THE FUTURE</div>
-			<table class="table text-left table-hover">
-				<thead>
-					<tr>
-						<th class="col-xs-2">Item</th>
-						<th class="col-xs-4">Description</th>
-						<th class="col-xs-2.5">Borrower</th>
-						<th class="col-xs-1.5">Start Date</th>
-						<th class="col-xs-1.5">End Date</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @future_lend_transactions.each do |transaction|%>
-						<tr class="info">
-							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
-							<td><%= transaction.item.description %></td>
-							<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
-							<td><%= transaction.start_date%></td>
-							<td><%= transaction.end_date%></td>
-							<% params = {redirect: lend_transactions_path, type: 'lender_cancel'} %>
-							<td><%= link_to transaction_path(transaction, transaction: params), method: :delete,
-								data: {confirm: "Are you sure you want to cancel this upcoming transaction?"},
-								'data-toggle': 'tooltip', title: 'Cancel this transaction', 'data-placement': 'right',
-								class: "btn btn-danger" do %>
-									<small><span class="glyphicon glyphicon-remove"></span></small>
-								<% end %>
-							</td>
+			<% if @future_lend_transactions.any? %>
+				<div class="h4" style="text-align:left">Plan to Lend</div>
+				<table class="table text-left table-hover">
+					<thead>
+						<tr>
+							<th class="col-xs-2">Item</th>
+							<th class="col-xs-4">Description</th>
+							<th class="col-xs-2.5">Borrower</th>
+							<th class="col-xs-1.5">Start Date</th>
+							<th class="col-xs-1.5">End Date</th>
 						</tr>
-					<% end %>
-				</tbody>
-			</table>
+					</thead>
+					<tbody>
+						<% @future_lend_transactions.each do |transaction|%>
+							<tr class="info">
+								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
+								<td><%= transaction.item.description %></td>
+								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
+								<td><%= transaction.start_date%></td>
+								<td><%= transaction.end_date%></td>
+								<% params = {redirect: lend_transactions_path, type: 'lender_cancel'} %>
+								<td><%= link_to transaction_path(transaction, transaction: params), method: :delete,
+									data: {confirm: "Are you sure you want to cancel this upcoming transaction?"},
+									'data-toggle': 'tooltip', title: 'Cancel this transaction', 'data-placement': 'right',
+									class: "btn btn-danger" do %>
+										<small><span class="glyphicon glyphicon-remove"></span></small>
+									<% end %>
+								</td>
+							</tr>
+						<% end %>
+					</tbody>
+				</table>
+			<% end %>
+
+			<% if @current_lend_transactions.empty? && @future_lend_transactions.empty? %>
+				<div><p>
+					Oh no! Looks like you aren't lending any items :'( <br>
+					register a new item to start lending!
+				</p></div>
+			<% end %>
+
 		</div>
 
 		<div class="col-xs-6">
