--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -65,7 +65,7 @@
 				<li>
 					<% if session[:user_id] == nil %>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get Started!<span class="caret"></span></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id = "line">Get Started!<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li align = "center"><%= link_to 'Login With Email', main_app.login_path %></li>
                 <li role="separator" class="divider"></li>
@@ -94,7 +94,9 @@
 							<li align = "center"><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
 							<li role="separator" class="divider"></li>
 							<li align = "center"><%= link_to current_user.friends.count.to_s + ' Following', main_app.my_friends_path %></li>
-							<li role="separator" class="divider"></li>
+              <li role="separator" class="divider"></li>
+              <li align = "center"><%= link_to Friendship.where(:friend_id => current_user.id).all.count.to_s + ' Followers', main_app.my_followers_path %></li>
+              <li role="separator" class="divider"></li>
 							<li align = "center"><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
 						</ul>
 					</li>
