--- a/Back_On_Rails/app/assets/stylesheets/trasnsactions.scss
+++ b/Back_On_Rails/app/assets/stylesheets/trasnsactions.scss
@@ -15,8 +15,11 @@
 
     .day {
         background-color: lightyellow;
-        height: 80px;
-        width: 10%;
+        height: 85px;
+        width: 14.3%;
+        padding-left: 4px;
+        padding-right: 4px;
+        padding-bottom: 4px;
     }
 
     .wday-0 {}
@@ -48,10 +51,16 @@
         font-size: 0;
     }
     .current-month {}
-}
 
-.day_format {
-    text-align: left;
-    width: 10%;
-    font-size: 90%;
+    .day_format {
+        //text-align: center;
+        font-size: 90%;
+        //max-height: 60px;
+        //background-color: red;
+        //overflow: auto;
+        //padding-left: 25px;
+        //word-wrap: break-word;
+
+    }
+
 }
