--- a/Back_On_Rails/app/views/simple_calendar/_month_calendar.html.erb
+++ b/Back_On_Rails/app/views/simple_calendar/_month_calendar.html.erb
@@ -10,10 +10,11 @@
   </div>
 
   <table class="table table-striped table-bordered table-hover">
+    <caption style="caption-side: bottom;">Test Caption</caption>
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
-          <th width="14.3%" style="border-bottom: 2px solid grey;"><%= t('date.abbr_day_names')[day.wday] %></th>
+          <th style="border-bottom: 2px solid grey;"><%= t('date.abbr_day_names')[day.wday] %></th>
         <% end %>
       </tr>
     </thead>
