--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -1,18 +1,19 @@
 <p>
     <%= month_calendar attribute: :start_date, end_attribute: :end_date, events: list_transactions do |date, transactions| %>
-        <%= date.day %>
- 
-        <% transactions.each do |transaction| %>
-            <div class="day_format">
+        <div><b><%= date.day %></b></div>
+
+        <div class="day_format">
+            <% transactions.each do |transaction| %>
                 <% if show == 'borrowers' %>
                     <%= transaction.borrower.username %>
                 <% elsif show == 'borrowers&items' %>
-                    <%= transaction.item.name %>: <%= transaction.borrower.username %>
+                    <%= transaction.item.name %>-<%= transaction.borrower.username %>
                 <% elsif show == 'items' %>
                     <%= transaction.item.name %>
                 <% end %>
-            </div>
-        <% end %>
+                <br>
+            <% end %>
+        </div>
 
     <% end %>
 </p>
