--- a/Back_On_Rails/app/views/transactions/_error_messages.html.erb
+++ b/Back_On_Rails/app/views/transactions/_error_messages.html.erb
@@ -1,12 +1,16 @@
-<p>
     <% if flash[:errors] %>
-        <div class="error_messages">
-            <h2>Form is invalid</h2>
-            <ul>
-                <% flash[:errors].each do |message| %>
-                    <li><%= message %></li>
-                <% end %>
-            </ul>
+        <div class="modal-dialog col-xs-4">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Invalid Form</h4>
+                </div>
+                <div class="modal-body">
+                    <ul>
+                        <% flash[:errors].each do |message| %>
+                            <div align="left"><%= message %></div>
+                        <% end %>
+                    </ul>
+                </div>
+            </div>
         </div>
     <% end %>
-</p>
