added highlighting date feature for calendars

--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -12,8 +12,8 @@
                     <%= transaction.item.name %>
                 <% end %>
                 <br>
+                <input type="hidden" value="<%=transaction.item.id%>">
             <% end %>
         </div>
-
     <% end %>
 </p>
