--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -1,6 +1,6 @@
 <div class = "center">
 	<div>
-		<div class="col-xs-6">
+		<div class="col-xs-6 manage_index">
 			<h2>BORROWED ITEMS</h2>
 			<p class="lead" style="font-size: 18px;">
 				Here you can manage all the items that you are currently borrowing <br>
@@ -22,12 +22,13 @@
 				  	</thead>
 					<tbody>
 						<% @current_borrow_transactions.each do |transaction|%>
-					        <tr class="success">
+					        <tr class="success" id="tr_table_1">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 					            <td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
 					            <td><%= transaction.start_date%></td>
 					            <td><%= transaction.end_date%></td>
+								<input type="hidden" value="<%=transaction.item.id%>">
 					        </tr>
 					    <% end %>
 				  	</tbody>
@@ -49,7 +50,7 @@
 					</thead>
 					<tbody>
 						<% @future_borrow_transactions.each do |transaction|%>
-					        <tr class="info">
+					        <tr class="info" id="tr_table_2">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 					            <td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
@@ -62,6 +63,7 @@
 										<small><span class="glyphicon glyphicon-remove"></span></small>
 									<% end %>
 								</td>
+								<input type="hidden" value="<%=transaction.item.id%>">
 					        </tr>
 					    <% end %>
 					</tbody>
