--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -1,6 +1,6 @@
 <div class = "center">
 	<div>
-		<div class="col-xs-6">
+		<div class="col-xs-6 manage_index">
 			<h2>PENDING TRANSACTIONS</h2>
 			<p class="lead" style="font-size: 18px;">
 				Here you can manage all requests to borrow your items <br>
@@ -24,7 +24,7 @@
 				  	</thead>
 					<tbody>
 						<% @pending_lend_transactions.each do |transaction|%>
-							<tr class="info">
+							<tr class="info" id="tr_table_1">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
@@ -47,6 +47,7 @@
 										<small><span class="glyphicon glyphicon-thumbs-down"></span></small>
 									<% end %>
 								</td>
+								<input type="hidden" value="<%=transaction.item.id%>">
 							</tr>
 						<% end %>
 				  	</tbody>
@@ -68,7 +69,7 @@
 					</thead>
 					<tbody>
 						<% @pending_borrow_transactions.each do |transaction|%>
-							<tr class="danger">
+							<tr class="danger" id="tr_table_2">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
@@ -89,6 +90,7 @@
 										<small><span class="glyphicon glyphicon-trash"></span></small>
 									<% end %>
 								</td>
+								<input type="hidden" value="<%=transaction.item.id%>">
 							</tr>
 						<% end %>
 					</tbody>
@@ -109,7 +111,7 @@
 		</div>
 
 		<div class="col-xs-6">
-			<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'borrowers&items' %>
+			<%= render 'calendar', list_transactions: [*@current_lend_transactions, *@future_lend_transactions], show: 'items' %>
 		</div>
 	</div>
 </div>
