--- a/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
@@ -1,5 +1,5 @@
 <div class = "center">
-	<div class="col-xs-6">
+	<div class="col-xs-6 manage_index">
 		<h2>YOUR LEND HISTORY</h2>
 		<p class="lead" style="font-size: 18px;">
 			Here you can view all your past lend transactions
@@ -19,12 +19,14 @@
 			  	</thead>
 				<tbody>
 					<% @completed_lend_transactions.each do |transaction|%>
-						<tr class="success">
+						<tr class="success" id="tr_table_1">
 							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 				            <td><%= transaction.item.description %></td>
 							<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
 				            <td><%= transaction.start_date%></td>
 				            <td><%= transaction.end_date%></td>
+							<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
+							<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
 						</tr>
 					<% end %>
 			  	</tbody>
