--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -47,7 +47,8 @@
 										<small><span class="glyphicon glyphicon-thumbs-down"></span></small>
 									<% end %>
 								</td>
-								<input type="hidden" value="<%=transaction.item.id%>">
+								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
+								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
 							</tr>
 						<% end %>
 				  	</tbody>
@@ -90,7 +91,8 @@
 										<small><span class="glyphicon glyphicon-trash"></span></small>
 									<% end %>
 								</td>
-								<input type="hidden" value="<%=transaction.item.id%>">
+								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
+								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
 							</tr>
 						<% end %>
 					</tbody>
