--- a/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_history_index.html.erb
@@ -19,7 +19,7 @@
 			  	</thead>
 				<tbody>
 					<% @completed_borrow_transactions.each do |transaction|%>
-						<tr class="success" id="tr_table_1">
+						<tr class="success tr_table_1">
 							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 							<td><%= transaction.item.description %></td>
 							<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
