--- a/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
@@ -19,7 +19,7 @@
 			  	</thead>
 				<tbody>
 					<% @completed_lend_transactions.each do |transaction|%>
-						<tr class="success" id="tr_table_1">
+						<tr class="success tr_table_1">
 							<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 				            <td><%= transaction.item.description %></td>
 							<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
@@ -46,6 +46,6 @@
 	</div>
 
 	<div class="col-xs-6">
-		<%= render 'calendar', list_transactions: @completed_lend_transactions, show: 'borrowers&items' %>
+		<%= render 'calendar', list_transactions: @completed_lend_transactions, show: 'items' %>
 	</div>
 </div>
