--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -22,7 +22,7 @@
 				  	</thead>
 					<tbody>
 						<% @current_lend_transactions.each do |transaction|%>
-							<tr class="success" id="tr_table_1">
+							<tr class="success tr_table_1">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
@@ -59,7 +59,7 @@
 					</thead>
 					<tbody>
 						<% @future_lend_transactions.each do |transaction|%>
-							<tr class="info" id="tr_table_2">
+							<tr class="info tr_table_2">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
