--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -24,7 +24,7 @@
 				  	</thead>
 					<tbody>
 						<% @pending_lend_transactions.each do |transaction|%>
-							<tr class="info" id="tr_table_1">
+							<tr class="info tr_table_1">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
@@ -70,7 +70,7 @@
 					</thead>
 					<tbody>
 						<% @pending_borrow_transactions.each do |transaction|%>
-							<tr class="danger" id="tr_table_2">
+							<tr class="danger tr_table_2">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
