Added the footer

--- a/Back_On_Rails/app/views/layouts/application.html.erb
+++ b/Back_On_Rails/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
     <%= include_gon %>
   </head>
 
+  <%= render 'layouts/navigation' %>
   <body>
-    <%= render 'layouts/navigation' %>
     <%= yield %>
   </body>
+  <%= render 'layouts/footer' %>
+  
 </html>
