--- a/Back_On_Rails/app/views/users/my_followers.html.erb
+++ b/Back_On_Rails/app/views/users/my_followers.html.erb
@@ -39,6 +39,6 @@
 	<table>
 <% else %>
 	<div class = "row col-lg-12">
-		<h2>You don't have any friends yet!</h2>
+		<h2>You don't have any follower yet!</h2>
 	</div>	
 <%end%>
