--- a/Back_On_Rails/app/assets/stylesheets/welcome.scss
+++ b/Back_On_Rails/app/assets/stylesheets/welcome.scss
@@ -40,4 +40,21 @@ $navbar-default-bg: black;
 	transform: translateX(-50%) translateY(-50%);
 }
 
+footer {
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+	background-color: white;
+}
+ul{
+	list-style: none;
+}
+
+li{
+	display: inline;
+}
+
+
 
