added relation between items and places, added button to self check places, modified places frontend part

--- a/Back_On_Rails/app/assets/stylesheets/places.scss
+++ b/Back_On_Rails/app/assets/stylesheets/places.scss
@@ -18,6 +18,12 @@ html, body {
   z-index: 10;
 }
 
+#show_map {
+  height: 400px;
+  width: 100%;
+  z-index: 10;
+}
+
 .submit_button {
   width: 200px;
 }
