--- a/Back_On_Rails/app/views/places/show.html.erb
+++ b/Back_On_Rails/app/views/places/show.html.erb
@@ -1,10 +1,31 @@
 <header><h1 class="display-4"><%= @place.address %></h1></header>
 
 <p>Address: <%= @place.address %></p>
-<p>Coordinates: <%= @place.latitude %> <%= @place.longitude %></p>
-<p><%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: "Are you sure?"} %></p>
+<!-- <p>Coordinates: <%= @place.latitude %> <%= @place.longitude %></p> -->
 
-<%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=#{@place.latitude},#{@place.longitude}&markers=#{@place.latitude},#{@place.longitude}&zoom=13&size=640x400&key=AIzaSyDw0kMkVGzNTppK2U4lsn_65sakVTCR1Mc",
-              class: 'img-fluid img-rounded', alt: "#{@place.address} on the map"%>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th colspan="3" class="page-header">
+        <h2>Listed Items</h2>
+      </th>
+    </tr>
+    <tr>
+      <th>Item</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @place.items.each do |item| %>
+      <tr>
+        <td>
+          <%= link_to item.name, item_path(item) %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+<table>
 
-<p><%=link_to "Place Index", places_path %></p>
+<div id="show_map"></div>
+
+<!-- <%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=#{@place.latitude},#{@place.longitude}&markers=#{@place.latitude},#{@place.longitude}&zoom=13&size=640x400&key=AIzaSyDw0kMkVGzNTppK2U4lsn_65sakVTCR1Mc",
+              class: 'img-fluid img-rounded', alt: "#{@place.address} on the map"%> -->
