revised highlighting code to address potential bugs

--- a/Back_On_Rails/app/views/transactions/_calendar.html.erb
+++ b/Back_On_Rails/app/views/transactions/_calendar.html.erb
@@ -13,8 +13,7 @@
                         <%= transaction.item.name %>
                     <% end %>
                     <br>
-                    <input id="item_id" type="hidden" value="<%=transaction.item.id%>">
-                    <input id="start_date" type="hidden" value="<%=transaction.start_date%>">
+                    <input class="transaction_id" type="hidden" value="<%=transaction.id%>">
                 </div>
             <% end %>
         </div>
