--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -28,8 +28,7 @@
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
 					            <td><%= transaction.start_date%></td>
 					            <td><%= transaction.end_date%></td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 					        </tr>
 					    <% end %>
 				  	</tbody>
@@ -64,8 +63,7 @@
 										<small><span class="glyphicon glyphicon-remove"></span></small>
 									<% end %>
 								</td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 					        </tr>
 					    <% end %>
 					</tbody>
