--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -36,8 +36,7 @@
 										<small><span class="glyphicon glyphicon-thumbs-up"></span></small>
 									<% end %>
 								</td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 							</tr>
 						<% end %>
 				  	</tbody>
@@ -73,8 +72,7 @@
 										<small><span class="glyphicon glyphicon-remove"></span></small>
 									<% end %>
 								</td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 							</tr>
 						<% end %>
 					</tbody>
