--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -47,8 +47,7 @@
 										<small><span class="glyphicon glyphicon-thumbs-down"></span></small>
 									<% end %>
 								</td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 							</tr>
 						<% end %>
 				  	</tbody>
@@ -91,8 +90,7 @@
 										<small><span class="glyphicon glyphicon-trash"></span></small>
 									<% end %>
 								</td>
-								<input class="item-id" type="hidden" value="<%=transaction.item.id%>">
-								<input class="start-date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
 							</tr>
 						<% end %>
 					</tbody>
