--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -24,7 +24,7 @@
 				  	</thead>
 					<tbody>
 						<% @pending_lend_transactions.each do |transaction|%>
-							<tr class="info tr_table_1">
+							<tr class="info tr_table_1 pending_requests">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
@@ -48,6 +48,9 @@
 									<% end %>
 								</td>
 								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
+								<input class="row_transaction_start_date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_end_date" type="hidden" value="<%=transaction.end_date%>">
+								<input class="row_item_id" type="hidden" value="<%=transaction.item.id%>">
 							</tr>
 						<% end %>
 				  	</tbody>
