added ActionMailer functionality. Will send emails on create and cancel transactions so far

--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -7,10 +7,9 @@
 				as well as your own requests to borrow others' items
 			</p>
 
-			<%= render 'error_messages' %>
-
 			<% if @pending_lend_transactions.any? %>
 				<hr>
+				<div class="col-xs-12"><%= render 'error_messages' %></div>
 				<div class="h4" style="text-align:left">Your Items</div>
 				<table class="table text-left table-hover">
 					<thead>
