create tag and many to many association btw items and tags. Changed the frontend of item edit.

--- a/Back_On_Rails/app/views/friends/_result.html.erb
+++ b/Back_On_Rails/app/views/friends/_result.html.erb
@@ -2,7 +2,7 @@
   <% if @users.size > 0 %>
     <div id="friend-lookup-results" class="well results-block col-md-12">
       <table class="search-results-table col-md-12">
-        <tboy>
+        <tbody>
           <% @users.each do |user| %>
             <tr>
               <td><strong>Name:</strong> <%= user.username %></td>
