--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -17,7 +17,7 @@
 	<% @items.each do |item| %>
 		<tr>
 			<td><%= item.name %></td>
-			<td><%= item.description %></td>
+			<td><%= truncate(item.description, length: 10) %></td>
 			<td><%= item.user.username%></td>
 			<td><%= link_to 'Show', item_path(item) %></td>
 			<% if logged_in? && current_user == item.user %>
