--- a/Back_On_Rails/app/views/items/new.html.erb
+++ b/Back_On_Rails/app/views/items/new.html.erb
@@ -1,4 +1,8 @@
-<h1>Register Item</h1>
+<br/><br/><br/><h1 align = "center">Register Item</h1>
 
-<%= render 'items/form' %>
-<%= link_to 'back to items', items_path %>
+<%= render 'form' %>
+<div class= "container" >
+  <div class = "col-sm-offset-2 col-sm-10">
+    <%= link_to 'All items', items_path %>
+  </div>
+</div>
