--- a/Back_On_Rails/app/views/items/show_items.html.erb
+++ b/Back_On_Rails/app/views/items/show_items.html.erb
@@ -24,7 +24,7 @@
 				</tr>
 			<% end %>
 		</tbody>
-	<table>
+	</table>
 <% else %>
 	<div align = "center">
 		<h2>This user does not have any item!</h2>
