--- a/Back_On_Rails/app/views/items/edit.html.erb
+++ b/Back_On_Rails/app/views/items/edit.html.erb
@@ -1,7 +1,18 @@
-<h1>Edit Registered Item</h1>
+<br/><br/><br/><h1 align = "center">Edit Registered Item</h1>
 
- <%= render 'items/form' %>
+ <%= render 'form' %>
 
-<%= link_to 'back to show', item_path(@item) %>
-<%= link_to 'back to items', items_path %>
+<div class= "container" >
+  <div class = "col-sm-offset-2 col-sm-10">
+    <%= link_to 'back', item_path(@item) %>
+  </div>
+</div>
+
+<br/>
+
+<div class= "container" >
+  <div class = "col-sm-offset-2 col-sm-10">
+    <%= link_to 'All items', items_path %>
+  </div>
+</div>
 
