--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,7 @@
 			<ul class="nav navbar-nav">
 				<li><%= link_to "Browse all Items", main_app.items_path %></li>
 				<li><%= link_to "Browse all Users", main_app.users_path %></li>
+        <li><%= link_to "All tags", main_app.tags_path %></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 					<ul class="dropdown-menu">
